# Ege-teacher-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: config.py
src/bot/: __main__.py  dispatcher.py
src/bot/handlers/: __init__.py  help.py  math.py  ru.py  start.py
src/bot/middleware/: register_check.py
src/bot/structures/callback_data/: ru_callback_data.py  ru_task_numbers_callback_data.py
src/bot/structures/keyboards/: main_keyboard.py  quiz_amount_keyboard.py  quiz_keyboard.py  ru_practice_types_keyboard.py  ru_tasks_numbers_keyboard.py
src/bot/util/: commands_description.py
src/db/: db_config.py
src/db/tasks_db/: ru_b4.py  task_model.py  task_repository.py
src/db/tasks_db/static/: ru_b4.py  ru_b5.py  ru_b5_task.txt  test_data.json
src/db/users_db/: user_model.py  user_repository.py
