[tool.poetry]
name = "ege-teacher-bot"
version = "0.1.0"
description = ""
authors = ["YungOleg <bilk5899@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
python-dotenv = "^1.0.0"
motor = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
